--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongoose": "^7.3.4",
-    "nodejs": "^0.0.0"
+    "nodejs": "^0.0.0",
+    "nodemon": "^3.0.1"
   }
 }
